--- a/src/classes/WaveMetadata.cls
+++ b/src/classes/WaveMetadata.cls
@@ -1,4 +1,4 @@
 public class WaveMetadata {
-	public WaveMetadataApplication servicesWave;
-	public WaveMetadataApplicationForSales salesWave;
+	public WaveMetadataApplicationObject[] commonObjects;
+	public WaveMetadataApplication[] waveApplications;
 }
